# IMG_pipelines

./: Bugs_and_To_do.txt  CODE_OF_CONDUCT.md  IMG_Start.sh  README.md  Start.sh  citations.txt
Additional_Scripts/: FastqConv.py  SeqExtract.py
Documentation/: MetaGaAP_Readme.txt
IMG_AP/: IMG_AP.sh  Readme.txt
IMG_Assembly/: IMG_Assembly.sh  Readme.txt
IMG_GAP/: IMG_GAP-build_13.sh  IMG_GAP.sh
IMG_GAP/IMG_GAP_Back-ends/: Set_wrk_dir.sh
IMG_R/: IMG_RClust  IMG_RClust.R  IMG_RHeat.R  RClust_Dist.R  RClust_SNPs.R  RHeat.R  Readme.txt
IMG_R/IMG_RBassay/: Bioassay_Scoresheet.xls  IMG_RBassay.R  RBassay.R  Readme.txt
IMG_R/RBassay/: Bioassay_Scoresheet.xls  Instructions.txt  RBassay.R  RBassay.sh  RBassayMKM.R  RBassaySKM.R  RBassayV2_beta.R  Readme.txt
Legacy/: Legacy_Start.sh  MetaGaAP-Legacy.sh  MetaGaAP.sh  Readme.txt
Legacy/IMG_AP/: IMG_AP.sh
Legacy/MetaGaAP_Back-ends/: Set_wrk_dir.sh
Legacy/MetaGaAP_Legacy/: MetaGaAP-Legacy.sh  readme.txt
Legacy/MetaGaAP_Legacy/Logs/: LogsGoHere.txt.txt
Legacy/MetaGaAP_Legacy/MetaGaAP_Back-ends/: Seq_List.R  Set_wrk_dir.sh
MetaGaAP/: MetaGaAP.sh
MetaGaAP-2/: .gitignore  README.md  SPEC.md  environment.yml  pyproject.toml
MetaGaAP-2/backend/metagaap2/: __init__.py  __main__.py  dedup.py  haplotypes.py  jobs.py  models.py  pipeline.py  runner.py  seqio.py  server.py  tools.py  vcf.py
MetaGaAP-2/backend/metagaap2/engines/: __init__.py  base.py  native.py  portable.py
MetaGaAP-2/backend/tests/: conftest.py  test_haplotypes.py  test_jobs.py  test_models.py  test_portable_caller.py  test_runner.py  test_vcf.py
MetaGaAP-2/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
MetaGaAP-2/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
MetaGaAP-2/frontend/src/components/: EngineStatus.tsx  FilePicker.tsx  JobProgress.tsx  ParamsPanel.tsx  ResultsView.tsx  RunConfigForm.tsx  SampleSheet.tsx  Stepper.tsx
MetaGaAP-2/frontend/src/lib/: format.ts
MetaGaAP-Py/: MetaGaAP-Py.py
MetaGaAP/Logs/: LogsGoHere.txt.txt
MetaGaAP/MetaGaAP_Back-ends/: Set_wrk_dir.sh  Subset_Stats.R
